[project]
name = "comfyui-astralanimator"
description = "A custom node for ComfyUI that enables smooth, keyframe-based animations for image generation. Create dynamic sequences with control over motion, zoom, rotation, and easing effects. Ideal for AI-assisted animation and video content creation."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/ShmuelRonen/ComfyUI-AstralAnimator"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-AstralAnimator"
Icon = ""
